--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,5 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+  <div class="col-6" *ngFor="let grafica of graficos | objectToArray">
+    <app-grafico-dona [data]="grafica.data" [labels]="grafica['labels']" type="doughnut" [legend]="grafica['leyenda']"></app-grafico-dona>
+  </div>
+</div>
