--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,44 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">
+          Barra de progreso
+        </h4>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValueNow]="progreso1"
+            aria-valuemin="0" aria-valuemax="100" [style.width]="progreso1+'%'"></div>
+        </div>
+        <br>
+
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-alert" role="progressbar" [attr.ariaValueNow]="progreso2"
+            aria-valuemin="0" aria-valuemax="100" [style.width]="progreso2+'%'"></div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (actualizaValor)="progreso1=$event" leyenda="Progress verde" [progreso]="20"></app-incrementador>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (actualizaValor)="progreso2=$event" leyenda="Progress azul" [progreso]="60"></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+</div>
