--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -23,7 +23,10 @@
               <a href="javascript:void()">Inbox</a>
             </li>
             <li>
-              <a href="javascript:void()">Account Setting</a>
+              <a routerLinkActive="active" [routerLink]="[ '/account-settings']">Account settings</a>
+            </li>
+            <li>
+              <a routerLink="/login">Login</a>
             </li>
             <li>
               <a href="javascript:void()">Logout</a>
@@ -32,25 +35,16 @@
         </li>
         <li class="nav-devider"></li>
         <li class="nav-small-cap">PERSONAL</li>
-        <li>
-          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-            <i class="mdi mdi-gauge"></i>
-            <span class="hide-menu">Dashboard
-              <span class="label label-rouded label-themecolor pull-right">4</span>
+        <li *ngFor="let menu of _sidebar.menu">
+          <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
+            <i [class]="menu.icono"></i>
+            <span class="hide-menu">{{menu.titulo}}
+              <span class="label label-rouded label-themecolor pull-right">{{menu.submenu.length}}</span>
             </span>
           </a>
           <ul aria-expanded="false" class="collapse">
-            <li>
-              <a href="index.html">Minimal </a>
-            </li>
-            <li>
-              <a href="index2.html">Analytical</a>
-            </li>
-            <li>
-              <a href="index3.html">Demographical</a>
-            </li>
-            <li>
-              <a href="index4.html">Modern</a>
+            <li *ngFor="let submenu of menu.submenu">
+<a routerLinkActive="active" [routerLink]="[submenu.url]">{{submenu.titulo}}</a>
             </li>
           </ul>
         </li>
@@ -63,4 +57,3 @@
 <!-- ============================================================== -->
 <!-- End Left Sidebar - style you can find in sidebar.scss  -->
 <!-- ============================================================== -->
-
